--- a/mainDB.bib
+++ b/mainDB.bib
@@ -1,3 +1,22 @@
+@Article{most2021,
+  author = {{Most}, Elias R. and {Noronha}, Jorge},
+  title  = "{Dissipative magnetohydrodynamics for nonresistive relativistic
+           plasmas: An implicit second-order flux-conservative formulation with
+           stiff relaxation}",
+  journal = {\prd},
+  year   = 2021,
+  month  = nov,
+  volume = {104},
+  number = {10},
+  eid    = {103028},
+  pages  = {103028},
+  doi    = {10.1103/PhysRevD.104.103028},
+  archiveprefix = {arXiv},
+  eprint = {2109.02796},
+  primaryclass = {astro-ph.HE},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2021PhRvD.104j3028M}
+}
+
 @Article{taub1948,
   author = {{Taub}, A.~H.},
   title  = "{Relativistic Rankine-Hugoniot Equations}",
