--- a/mainDB.bib
+++ b/mainDB.bib
@@ -5624,6 +5624,24 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2022SoftX..1901168D}
 }
 
+@Article{most2022,
+  author  = {{Most}, Elias R. and {Noronha}, Jorge and {Philippov}, Alexander
+            A.},
+  title   = "{Modelling general-relativistic plasmas with collisionless moments
+            and dissipative two-fluid magnetohydrodynamics}",
+  journal = {\mnras},
+  year    = 2022,
+  month   = aug,
+  volume  = {514},
+  number  = {4},
+  pages   = {4989-5003},
+  doi     = {10.1093/mnras/stac1435},
+  archiveprefix = {arXiv},
+  eprint  = {2111.05752},
+  primaryclass = {astro-ph.HE},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.514.4989M}
+}
+
 @Article{buellet2023,
   author  = {{Buellet}, A. -C. and {Foglizzo}, T. and {Guilet}, J. and
             {Abdikamalov}, E.},
