--- a/mainDB.bib
+++ b/mainDB.bib
@@ -3732,6 +3732,25 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2019JCoPh.389...62C}
 }
 
+@Article{denicol2019,
+  author  = {{Denicol}, Gabriel S. and {Moln{\'a}r}, Etele and {Niemi}, Harri
+            and {Rischke}, Dirk H.},
+  title   = "{Resistive dissipative magnetohydrodynamics from the
+            Boltzmann-Vlasov equation}",
+  journal = {\prd},
+  year    = 2019,
+  month   = mar,
+  volume  = {99},
+  number  = {5},
+  eid     = {056017},
+  pages   = {056017},
+  doi     = {10.1103/PhysRevD.99.056017},
+  archiveprefix = {arXiv},
+  eprint  = {1902.01699},
+  primaryclass = {nucl-th},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/2019PhRvD..99e6017D}
+}
+
 @Article{abbott2020,
   author  = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abraham},
             S. and {Acernese}, F. and {Ackley}, K. and {Adams}, C. and {Adya},
