--- a/mainDB.bib
+++ b/mainDB.bib
@@ -1986,6 +1986,25 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2012ApJ...749...98T}
 }
 
+@Article{denicol2012,
+  author  = {{Denicol}, G.~S. and {Niemi}, H. and {Moln{\'a}r}, E. and
+            {Rischke}, D.~H.},
+  title   = "{Derivation of transient relativistic fluid dynamics from the
+            Boltzmann equation}",
+  journal = {\prd},
+  year    = 2012,
+  month   = jun,
+  volume  = {85},
+  number  = {11},
+  eid     = {114047},
+  pages   = {114047},
+  doi     = {10.1103/PhysRevD.85.114047},
+  archiveprefix = {arXiv},
+  eprint  = {1202.4551},
+  primaryclass = {nucl-th},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/2012PhRvD..85k4047D}
+}
+
 @Article{burrows2013,
   author  = {{Burrows}, Adam},
   title   = "{Colloquium: Perspectives on core-collapse supernova theory}",
