--- a/mainDB.bib
+++ b/mainDB.bib
@@ -11,6 +11,13 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1948PhRv...74..328T}
 }
 
+@Book{sedov1959,
+  author  = {{Sedov}, L.~I.},
+  title   = "{Similarity and Dimensional Methods in Mechanics}",
+  year    = 1959,
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/1959sdmm.book.....S}
+}
+
 @Article{colgate1960,
   author  = {{Colgate}, Stirling A. and {Johnson}, Montgomery H.},
   title   = "{Hydrodynamic Origin of Cosmic Rays}",
