--- a/mainDB.bib
+++ b/mainDB.bib
@@ -102,7 +102,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1978JCoPh..27....1S}
 }
 
-@Article{1979,
+@Article{vanriper1979,
   author  = {{van Riper}, K.~A.},
   title   = "{General relativistic hydrodynamics and the adiabatic collapse of
             stellar cores.}",
@@ -128,7 +128,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1981A&A...103..147H}
 }
 
-@Article{hillebrandt1981*1,
+@Article{hillebrandt1981a,
   author  = {{Hillebrandt}, W. and {Mueller}, E.},
   title   = "{Computer simulations of stellar collapse and shock wave
             propagation}",
@@ -154,7 +154,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1983JCoPh..49..357H}
 }
 
-@Article{harten1983*1,
+@Article{harten1983a,
   issn    = {00361445},
   url     = {http://www.jstor.org/stable/2030019},
   author  = {Amiram Harten and Peter D. Lax and Bram Van Leer},
@@ -255,7 +255,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1989JCoPh..84...90C}
 }
 
-@Article{cockburn1989*1,
+@Article{cockburn1989a,
   author  = {{Cockburn}, Bernardo and {Shu}, Chi-Wang},
   title   = "{TVB Runge-Kutta Local Projection Discontinuous Galerkin Finite
             Element Method for Conservation Laws II: General Framework}",
@@ -336,7 +336,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1992ApJ...395..642H}
 }
 
-@Article{herant1992*1,
+@Article{herant1992a,
   author  = {{Herant}, Marc and {Benz}, Willy and {Colgate}, Stirling},
   title   = "{Postcollapse Hydrodynamics of SN 1987A: Two-dimensional
             Simulations of the Early Evolution}",
@@ -362,7 +362,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1993ApJ...405..637M}
 }
 
-@Article{mezzacappa1993*1,
+@Article{mezzacappa1993a,
   author  = {{Mezzacappa}, Anthony and {Bruenn}, Stephen W.},
   title   = "{A Numerical Method for Solving the Neutrino Boltzmann Equation
             Coupled to Spherically Symmetric Stellar Core Collapse}",
@@ -375,7 +375,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1993ApJ...405..669M}
 }
 
-@Article{mezzacappa1993*2,
+@Article{mezzacappa1993b,
   author  = {{Mezzacappa}, Anthony and {Bruenn}, Stephen W.},
   title   = "{Stellar Core Collapse: A Boltzmann Treatment of Neutrino-Electron
             Scattering}",
@@ -429,7 +429,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/1995PhR...256..135J}
 }
 
-@Article{janka1995*1,
+@Article{janka1995a,
   author  = {{Janka}, H. -Thomas and {Mueller}, Ewald},
   title   = "{The First Second of a Type II Supernova: Convection, Accretion,
             and Shock Propagation}",
@@ -798,7 +798,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2003A&A...408..621K}
 }
 
-@Article{mart2003,
+@Article{marti2003,
   author  = {{Mart{\'\i}}, Jos{\'e} Maria and {M{\"u}ller}, Ewald},
   title   = "{Numerical Hydrodynamics in Special Relativity}",
   journal = {Living Reviews in Relativity},
@@ -1113,7 +1113,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2007Natur.445...58B}
 }
 
-@Article{blondin2007*1,
+@Article{blondin2007a,
   author  = {{Blondin}, John M. and {Shaw}, Samantha},
   title   = "{Linear Growth of Spiral SASI Modes in Core-Collapse Supernovae}",
   journal = {\apj},
@@ -1548,7 +1548,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2010ApJ...711...99G}
 }
 
-@Article{guilet2010*1,
+@Article{guilet2010a,
   author  = {{Guilet}, J{\'e}r{\^o}me and {Sato}, Jun'ichi and {Foglizzo},
             Thierry},
   title   = "{The Saturation of SASI by Parasitic Instabilities}",
@@ -1864,7 +1864,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2012ApJ...760...94L}
 }
 
-@Article{lentz2012*1,
+@Article{lentz2012a,
   author  = {{Lentz}, Eric J. and {Mezzacappa}, Anthony and {Messer}, O.~E.
             Bronson and {Hix}, W. Raphael and {Bruenn}, Stephen W.},
   title   = "{Interplay of Neutrino Opacities in Core-collapse Supernova
@@ -1903,7 +1903,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2012ApJ...756...84M}
 }
 
-@Article{muller2012*1,
+@Article{muller2012a,
   author  = {{M{\"u}ller}, E. and {Janka}, H. -Th. and {Wongwathanarat}, A.},
   title   = "{Parametrized 3D models of neutrino-driven supernova explosions.
             Neutrino emission asymmetries and gravitational-wave signals}",
@@ -2459,7 +2459,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2015ApJ...808L..42M}
 }
 
-@Article{melson2015*1,
+@Article{melson2015a,
   author  = {{Melson}, Tobias and {Janka}, Hans-Thomas and {Marek}, Andreas},
   title   = "{Neutrino-driven Supernova of a Low-mass Iron-core Progenitor
             Boosted by Three-dimensional Turbulent Convection}",
@@ -2564,7 +2564,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2016ApJ...829L..14K}
 }
 
-@Article{kuroda2016*1,
+@Article{kuroda2016a,
   author  = {{Kuroda}, Takami and {Takiwaki}, Tomoya and {Kotake}, Kei},
   title   = "{A New Multi-energy Neutrino Radiation-Hydrodynamics Code in Full
             General Relativity and Its Application to the Gravitational Collapse
@@ -2964,7 +2964,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2017PhDT.......281A}
 }
 
-@Article{andresen2017*1,
+@Article{andresen2017a,
   author  = {{Andresen}, H. and {M{\"u}ller}, B. and {M{\"u}ller}, E. and
             {Janka}, H. -Th.},
   title   = "{Gravitational wave signals from 3D neutrino hydrodynamics
@@ -3080,7 +3080,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2017ApJ...851...62K}
 }
 
-@InProceedings{kuroda2017*1,
+@InProceedings{kuroda2017a,
   author  = {{Kuroda}, Takami and {Kotake}, Kei and {Takiwaki}, Tomoya},
   title   = "{Quasi-Periodic Gravitational-Wave Emission due to the SASI
             Motion}",
@@ -3178,7 +3178,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2017arXiv171008372Y}
 }
 
-@InCollection{janka2017*1,
+@InCollection{janka2017a,
   author  = {{Janka}, Hans-Thomas},
   title   = "{Neutrino-Driven Explosions}",
   booktitle = {Handbook of Supernovae},
@@ -3302,7 +3302,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2018ApJ...865...81O}
 }
 
-@Article{oconnor2018*1,
+@Article{oconnor2018a,
   author  = {{O'Connor}, Evan P. and {Couch}, Sean M.},
   title   = "{Two-dimensional Core-collapse Supernova Explosions Aided by
             General Relativity with Multidimensional Neutrino Transport}",
@@ -3320,7 +3320,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2018ApJ...854...63O}
 }
 
-@Article{oconnor2018*2,
+@Article{oconnor2018b,
   author  = {{O'Connor}, Evan P. and {Couch}, Sean M.},
   title   = "{Exploring Fundamentally Three-dimensional Phenomena in
             High-fidelity Simulations of Core-collapse Supernovae}",
@@ -4169,7 +4169,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2020LRR....23....3A}
 }
 
-@Article{abbott2020*1,
+@Article{abbott2020a,
   author  = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abraham},
             S. and {Acernese}, F. and {Ackley}, K. and {Adams}, C. and {Adya},
             V.~B. and {Affeldt}, C. and {Agathos}, M. and {Agatsuma}, K. and
@@ -4533,7 +4533,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2020PhRvD.101h4002A}
 }
 
-@Article{abbott2020*2,
+@Article{abbott2020b,
   author  = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abraham},
             S. and {Acernese}, F. and {Ackley}, K. and {Adams}, C. and {Adya},
             V.~B. and {Affeldt}, C. and {Agathos}, M. and {Agatsuma}, K. and
@@ -5051,7 +5051,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2020LRCA....6....4M}
 }
 
-@Article{mezzacappa2020*1,
+@Article{mezzacappa2020a,
   author  = {{Mezzacappa}, Anthony and {Marronetti}, Pedro and {Landfield}, Ryan
             E. and {Lentz}, Eric J. and {Yakunin}, Konstantin N. and {Bruenn},
             Stephen W. and {Hix}, W. Raphael and {Messer}, O.~E. Bronson and
@@ -5072,7 +5072,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2020PhRvD.102b3027M}
 }
 
-@Article{muller2020*1,
+@Article{muller2020a,
   author  = {{M{\"u}ller}, Bernhard and {Varma}, Vishnu},
   title   = "{A 3D simulation of a neutrino-driven supernova explosion aided by
             convection and magnetic fields}",
@@ -5790,7 +5790,7 @@
   adsurl  = {https://ui.adsabs.harvard.edu/abs/2023IAUS..362..215M}
 }
 
-@Article{mezzacappa2023*1,
+@Article{mezzacappa2023a,
   author  = {{Mezzacappa}, Anthony and {Marronetti}, Pedro and {Landfield}, Ryan
             E. and {Lentz}, Eric J. and {Murphy}, R. Daniel and {Hix}, W.
             Raphael and {Harris}, J. Austin and {Bruenn}, Stephen W. and
