--- a/mainDB.bib
+++ b/mainDB.bib
@@ -12,10 +12,11 @@
 }
 
 @Book{sedov1959,
-  author  = {{Sedov}, L.~I.},
-  title   = "{Similarity and Dimensional Methods in Mechanics}",
-  year    = 1959,
-  adsurl  = {https://ui.adsabs.harvard.edu/abs/1959sdmm.book.....S}
+  author    = {{Sedov}, L.~I.},
+  title     = "{Similarity and Dimensional Methods in Mechanics}",
+  year      = 1959,
+  publisher = {Academic Press},
+  adsurl    = {https://ui.adsabs.harvard.edu/abs/1959sdmm.book.....S}
 }
 
 @Article{colgate1960,
