fix marti 2003 entry

--- a/mainDB.bib
+++ b/mainDB.bib
@@ -810,7 +810,7 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2003A&A...408..621K}
 }
 
-@Article{mart2003,
+@Article{marti2003,
   author        = {{Mart{\'\i}}, Jos{\'e} Maria and {M{\"u}ller}, Ewald},
   title         = "{Numerical Hydrodynamics in Special Relativity}",
   journal       = {Living Reviews in Relativity},
