--- a/mainDB.bib
+++ b/mainDB.bib
@@ -2247,6 +2247,22 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.431.1853P}
 }
 
+@Article{cardall2014,
+  doi           = {10.1088/0067-0049/210/2/17},
+  url           = {https://doi.org/10.1088/0067-0049/210/2/17},
+  year          = {2014},
+  month         = {jan},
+  publisher     = {The American Astronomical Society},
+  volume        = {210},
+  number        = {2},
+  pages         = {17},
+  author        = {Cardall, Christian Y. and Budiardja, Reuben D. and Endeve,
+                  Eirik and Mezzacappa, Anthony},
+  title         = {GenASiS: GENERAL ASTROPHYSICAL SIMULATION SYSTEM. I.
+                  REFINABLE MESH AND NONRELATIVISTIC HYDRODYNAMICS},
+  journal       = {The Astrophysical Journal Supplement Series}
+}
+
 @Article{couch2014,
   author        = {{Couch}, Sean M. and {O'Connor}, Evan P.},
   title         = "{High-resolution Three-dimensional Simulations of
