--- a/mainDB.bib
+++ b/mainDB.bib
@@ -11,6 +11,20 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/1948PhRv...74..328T}
 }
 
+@Article{taylor1950,
+  author        = {{Taylor}, Geoffrey},
+  title         = "{The Formation of a Blast Wave by a Very Intense Explosion.
+                  II. The Atomic Explosion of 1945}",
+  journal       = {Proceedings of the Royal Society of London Series A},
+  year          = 1950,
+  month         = mar,
+  volume        = {201},
+  number        = {1065},
+  pages         = {175-186},
+  doi           = {10.1098/rspa.1950.0050},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/1950RSPSA.201..175T}
+}
+
 @Book{sedov1959,
   author        = {{Sedov}, L.~I.},
   title         = "{Similarity and Dimensional Methods in Mechanics}",
