--- a/mainDB.bib
+++ b/mainDB.bib
@@ -1521,6 +1521,26 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2009ApJ...694..833S}
 }
 
+@Article{almgren2010,
+  author        = {{Almgren}, A.~S. and {Beckner}, V.~E. and {Bell}, J.~B. and
+                  {Day}, M.~S. and {Howell}, L.~H. and {Joggerst}, C.~C. and
+                  {Lijewski}, M.~J. and {Nonaka}, A. and {Singer}, M. and
+                  {Zingale}, M.},
+  title         = "{CASTRO: A New Compressible Astrophysical Solver. I.
+                  Hydrodynamics and Self-gravity}",
+  journal       = {\apj},
+  year          = 2010,
+  month         = jun,
+  volume        = {715},
+  number        = {2},
+  pages         = {1221-1238},
+  doi           = {10.1088/0004-637X/715/2/1221},
+  archiveprefix = {arXiv},
+  eprint        = {1005.0114},
+  primaryclass  = {astro-ph.IM},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2010ApJ...715.1221A}
+}
+
 @Book{baumgarte2010,
   author        = {{Baumgarte}, Thomas W. and {Shapiro}, Stuart L.},
   title         = "{Numerical Relativity: Solving Einstein's Equations on the
