--- a/mainDB.bib
+++ b/mainDB.bib
@@ -6119,6 +6119,24 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2023arXiv230904429L}
 }
 
+@Article{powell2023,
+  author        = {{Powell}, Jade and {M{\"u}ller}, Bernhard and
+                  {Aguilera-Dena}, David R. and {Langer}, Norbert},
+  title         = "{Three dimensional magnetorotational core-collapse supernova
+                  explosions of a 39 solar mass progenitor star}",
+  journal       = {\mnras},
+  year          = 2023,
+  month         = jul,
+  volume        = {522},
+  number        = {4},
+  pages         = {6070-6086},
+  doi           = {10.1093/mnras/stad1292},
+  archiveprefix = {arXiv},
+  eprint        = {2212.00200},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.522.6070P}
+}
+
 @Article{dunham2024,
   author        = {{Dunham}, Samuel J. and {Endeve}, Eirik and {Mezzacappa},
                   Anthony and {Blondin}, John M. and {Buffaloe}, Jesse and
@@ -6137,4 +6155,97 @@
   eprint        = {2307.10904},
   primaryclass  = {astro-ph.HE},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2024ApJ...964...38D}
+}
+
+@Article{shibagaki2024,
+  author        = {{Shibagaki}, Shota and {Kuroda}, Takami and {Kotake}, Kei and
+                  {Takiwaki}, Tomoya and {Fischer}, Tobias},
+  title         = "{Three-dimensional GRMHD simulations of rapidly rotating
+                  stellar core collapse}",
+  journal       = {\mnras},
+  year          = 2024,
+  month         = jul,
+  volume        = {531},
+  number        = {3},
+  pages         = {3732-3743},
+  doi           = {10.1093/mnras/stae1361},
+  archiveprefix = {arXiv},
+  eprint        = {2309.05161},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.531.3732S}
+}
+
+@Article{shankar2025,
+  author        = {{Shankar}, Swapnil and {M{\"o}sta}, Philipp and {Haas},
+                  Roland and {Schnetter}, Erik},
+  title         = "{3D full-GR simulations of magnetorotational core-collapse
+                  supernovae on GPUs: A systematic study of rotation rates and
+                  magnetic fields}",
+  journal       = {arXiv e-prints},
+  year          = 2025,
+  month         = apr,
+  eid           = {arXiv:2504.11537},
+  pages         = {arXiv:2504.11537},
+  doi           = {10.48550/arXiv.2504.11537},
+  archiveprefix = {arXiv},
+  eprint        = {2504.11537},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025arXiv250411537S}
+}
+
+@Article{vartanyan2025,
+  author        = {{Vartanyan}, David and {Tsang}, Benny T. -H. and {Kasen},
+                  Daniel and {Burrows}, Adam and {Wang}, Tianshu and
+                  {Teryoshin}, Lizzy},
+  title         = "{A 3D Simulation of a Type II-P Supernova: From Core Bounce
+                  to beyond Shock Breakout}",
+  journal       = {\apj},
+  year          = 2025,
+  month         = mar,
+  volume        = {982},
+  number        = {1},
+  eid           = {9},
+  pages         = {9},
+  doi           = {10.3847/1538-4357/adb1e4},
+  archiveprefix = {arXiv},
+  eprint        = {2411.03434},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025ApJ...982....9V}
+}
+
+@Article{sykes2025,
+  author        = {{Sykes}, Bailey and {M{\"u}ller}, Bernhard},
+  title         = "{Long-time 3D supernova simulations of nonrotating
+                  progenitors with magnetic fields}",
+  journal       = {\prd},
+  year          = 2025,
+  month         = mar,
+  volume        = {111},
+  number        = {6},
+  eid           = {063042},
+  pages         = {063042},
+  doi           = {10.1103/PhysRevD.111.063042},
+  archiveprefix = {arXiv},
+  eprint        = {2412.01155},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025PhRvD.111f3042S}
+}
+
+@Article{nakamura2025,
+  author        = {{Nakamura}, Ko and {Takiwaki}, Tomoya and {Matsumoto}, Jin
+                  and {Kotake}, Kei},
+  title         = "{Three-dimensional magnetohydrodynamic simulations of
+                  core-collapse supernovae - I. Hydrodynamic evolution and
+                  protoneutron star properties}",
+  journal       = {\mnras},
+  year          = 2025,
+  month         = jan,
+  volume        = {536},
+  number        = {1},
+  pages         = {280-294},
+  doi           = {10.1093/mnras/stae2611},
+  archiveprefix = {arXiv},
+  eprint        = {2405.08367},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.536..280N}
 }
