--- a/mainDB.bib
+++ b/mainDB.bib
@@ -6137,6 +6137,26 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.522.6070P}
 }
 
+@Article{shankar2023,
+  author        = {{Shankar}, Swapnil and {M{\"o}sta}, Philipp and {Brandt},
+                  Steven R. and {Haas}, Roland and {Schnetter}, Erik and {de
+                  Graaf}, Yannick},
+  title         = "{GRaM-X: a new GPU-accelerated dynamical spacetime GRMHD code
+                  for Exascale computing with the Einstein Toolkit}",
+  journal       = {Classical and Quantum Gravity},
+  year          = 2023,
+  month         = oct,
+  volume        = {40},
+  number        = {20},
+  eid           = {205009},
+  pages         = {205009},
+  doi           = {10.1088/1361-6382/acf2d9},
+  archiveprefix = {arXiv},
+  eprint        = {2210.17509},
+  primaryclass  = {astro-ph.IM},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2023CQGra..40t5009S}
+}
+
 @Article{dunham2024,
   author        = {{Dunham}, Samuel J. and {Endeve}, Eirik and {Mezzacappa},
                   Anthony and {Blondin}, John M. and {Buffaloe}, Jesse and
