--- a/mainDB.bib
+++ b/mainDB.bib
@@ -6269,3 +6269,36 @@
   primaryclass  = {astro-ph.HE},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.536..280N}
 }
+
+@Article{sykes2025a,
+  author        = {{Sykes}, Bailey and {M{\"u}ller}, Bernhard},
+  title         = "{Trends in gravitational wave emission in axisymmetric
+                  simulations of rotating core-collapse supernovae}",
+  journal       = {arXiv e-prints},
+  year          = 2025,
+  month         = dec,
+  eid           = {arXiv:2512.07066},
+  pages         = {arXiv:2512.07066},
+  archiveprefix = {arXiv},
+  eprint        = {2512.07066},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025arXiv251207066S}
+}
+
+@Article{giudici2025,
+  author        = {{Giudici}, Beatrice and {Gabler}, Michael and {Janka},
+                  Hans-Thomas},
+  title         = "{Hydrodynamic instabilities in long-term three-dimensional
+                  simulations of neutrino-driven supernovae of 13 red supergiant
+                  progenitors}",
+  journal       = {arXiv e-prints},
+  year          = 2025,
+  month         = nov,
+  eid           = {arXiv:2511.11796},
+  pages         = {arXiv:2511.11796},
+  doi           = {10.48550/arXiv.2511.11796},
+  archiveprefix = {arXiv},
+  eprint        = {2511.11796},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2025arXiv251111796G}
+}
