--- a/mainDB.bib
+++ b/mainDB.bib
@@ -130,6 +130,19 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/1979ApJ...232..558V}
 }
 
+@Article{orszag1979,
+  author        = {{Orszag}, S.~A. and {Tang}, C. -M.},
+  title         = "{Small-scale structure of two-dimensional magnetohydrodynamic
+                  turbulence}",
+  journal       = {Journal of Fluid Mechanics},
+  year          = 1979,
+  month         = jan,
+  volume        = {90},
+  pages         = {129-143},
+  doi           = {10.1017/S002211207900210X},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/1979JFM....90..129O}
+}
+
 @Article{hillebrandt1981,
   author        = {{Hillebrandt}, W. and {Mueller}, E.},
   title         = "{Computer simulations of stellar collapse and shock wave
