--- a/mainDB.bib
+++ b/mainDB.bib
@@ -1814,6 +1814,20 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2011ApJS..192....9T}
 }
 
+@Article{beckwith2011,
+  author        = "Beckwith, Kris and Stone, James M.",
+  title         = "{A Second Order Godunov Method for Multidimensional
+                  Relativistic Magnetohydrodynamics}",
+  eprint        = "1101.3573",
+  archiveprefix = "arXiv",
+  primaryclass  = "astro-ph.HE",
+  doi           = "10.1088/0067-0049/193/1/6",
+  journal       = "Astrophys. J. Suppl.",
+  volume        = "193",
+  pages         = "6",
+  year          = "2011"
+}
+
 @Article{burrows2012,
   author        = {{Burrows}, Adam and {Dolence}, Joshua C. and {Murphy},
                   Jeremiah W.},
