--- a/mainDB.bib
+++ b/mainDB.bib
@@ -6329,3 +6329,19 @@
   primaryclass  = {astro-ph.HE},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2025arXiv251111796G}
 }
+
+@Article{gutierrez2026,
+  author        = {{Guti{\'e}rrez}, Eduardo M. and {Radice}, David and {Fields},
+                  Jacob and {Stone}, James M.},
+  title         = "{Turbulent Dynamo Action in Binary Neutron Star Mergers}",
+  journal       = {arXiv e-prints},
+  year          = 2026,
+  month         = jan,
+  eid           = {arXiv:2601.20953},
+  pages         = {arXiv:2601.20953},
+  doi           = {10.48550/arXiv.2601.20953},
+  archiveprefix = {arXiv},
+  eprint        = {2601.20953},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2026arXiv260120953G}
+}
