--- a/main.bib
+++ b/main.bib
@@ -5491,25 +5491,6 @@
   journal       = {Classical and Quantum Gravity}
 }
 
-@Article{ripperda2020,
-  author        = {{Ripperda}, Bart and {Bacchini}, Fabio and {Philippov},
-                  Alexander A.},
-  title         = "{Magnetic Reconnection and Hot Spot Formation in Black Hole
-                  Accretion Disks}",
-  journal       = {\apj},
-  year          = 2020,
-  month         = sep,
-  volume        = {900},
-  number        = {2},
-  eid           = {100},
-  pages         = {100},
-  doi           = {10.3847/1538-4357/ababab},
-  archiveprefix = {arXiv},
-  eprint        = {2003.04330},
-  primaryclass  = {astro-ph.HE},
-  adsurl        = {https://ui.adsabs.harvard.edu/abs/2020ApJ...900..100R}
-}
-
 @Article{most2021,
   author        = {{Most}, Elias R. and {Noronha}, Jorge},
   title         = "{Dissipative magnetohydrodynamics for nonresistive
@@ -6241,24 +6222,6 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.531.3732S}
 }
 
-@Article{cortes2024,
-  author        = {{Cort{\'e}s}, Jorge and {Sironi}, Lorenzo},
-  title         = "{Particle acceleration and non-thermal emission at the
-                  intrabinary shock of spider pulsars - I. Non-radiative
-                  simulations}",
-  journal       = {\mnras},
-  year          = 2024,
-  month         = nov,
-  volume        = {534},
-  number        = {3},
-  pages         = {2551-2565},
-  doi           = {10.1093/mnras/stae2278},
-  archiveprefix = {arXiv},
-  eprint        = {2404.03700},
-  primaryclass  = {astro-ph.HE},
-  adsurl        = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.534.2551C}
-}
-
 @Article{shankar2025,
   author        = {{Shankar}, Swapnil and {M{\"o}sta}, Philipp and {Haas},
                   Roland and {Schnetter}, Erik},
@@ -6366,19 +6329,60 @@
   primaryclass  = {astro-ph.HE},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2025arXiv251111796G}
 }
-
-@Article{gutierrez2026,
-  author        = {{Guti{\'e}rrez}, Eduardo M. and {Radice}, David and {Fields},
-                  Jacob and {Stone}, James M.},
-  title         = "{Turbulent Dynamo Action in Binary Neutron Star Mergers}",
-  journal       = {arXiv e-prints},
-  year          = 2026,
-  month         = jan,
-  eid           = {arXiv:2601.20953},
-  pages         = {arXiv:2601.20953},
-  doi           = {10.48550/arXiv.2601.20953},
-  archiveprefix = {arXiv},
-  eprint        = {2601.20953},
-  primaryclass  = {astro-ph.HE},
-  adsurl        = {https://ui.adsabs.harvard.edu/abs/2026arXiv260120953G}
+@ARTICLE{2026arXiv260120953G,
+       author = {{Guti{\'e}rrez}, Eduardo M. and {Radice}, David and {Fields}, Jacob and {Stone}, James M.},
+        title = "{Turbulent Dynamo Action in Binary Neutron Star Mergers}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2026,
+        month = jan,
+          eid = {arXiv:2601.20953},
+        pages = {arXiv:2601.20953},
+          doi = {10.48550/arXiv.2601.20953},
+archivePrefix = {arXiv},
+       eprint = {2601.20953},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2026arXiv260120953G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@ARTICLE{2024MNRAS.534.2551C,
+       author = {{Cort{\'e}s}, Jorge and {Sironi}, Lorenzo},
+        title = "{Particle acceleration and non-thermal emission at the intrabinary shock of spider pulsars - I. Non-radiative simulations}",
+      journal = {\mnras},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2024,
+        month = nov,
+       volume = {534},
+       number = {3},
+        pages = {2551-2565},
+          doi = {10.1093/mnras/stae2278},
+archivePrefix = {arXiv},
+       eprint = {2404.03700},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.534.2551C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2020ApJ...900..100R,
+       author = {{Ripperda}, Bart and {Bacchini}, Fabio and {Philippov}, Alexander A.},
+        title = "{Magnetic Reconnection and Hot Spot Formation in Black Hole Accretion Disks}",
+      journal = {\apj},
+     keywords = {Black Hole physics, Accretion, Magnetohydrodynamics, General relativity, Plasma astrophysics, 159, 14, 1964, 641, 1261, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology, Physics - Plasma Physics},
+         year = 2020,
+        month = sep,
+       volume = {900},
+       number = {2},
+          eid = {100},
+        pages = {100},
+          doi = {10.3847/1538-4357/ababab},
+archivePrefix = {arXiv},
+       eprint = {2003.04330},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...900..100R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
