--- a/mainDB.bib
+++ b/mainDB.bib
@@ -1140,6 +1140,24 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2006A&A...457..963S}
 }
 
+@Article{dimmelmeier2006,
+  author        = {{Dimmelmeier}, Harald and {Stergioulas}, Nikolaos and {Font},
+                  Jos{\'e} A.},
+  title         = "{Non-linear axisymmetric pulsations of rotating relativistic
+                  stars in the conformal flatness approximation}",
+  journal       = {\mnras},
+  year          = 2006,
+  month         = jun,
+  volume        = {368},
+  number        = {4},
+  pages         = {1609-1630},
+  doi           = {10.1111/j.1365-2966.2006.10274.x},
+  archiveprefix = {arXiv},
+  eprint        = {astro-ph/0511394},
+  primaryclass  = {astro-ph},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.368.1609D}
+}
+
 @Article{blondin2007,
   author        = {{Blondin}, John M. and {Mezzacappa}, Anthony},
   title         = "{Pulsar spins from an instability in the accretion shock of
@@ -5978,6 +5996,24 @@
   eprint        = {2111.05752},
   primaryclass  = {astro-ph.HE},
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.514.4989M}
+}
+
+@Article{cortes2022,
+  author        = {{Cort{\'e}s}, Jorge and {Sironi}, Lorenzo},
+  title         = "{Global Kinetic Modeling of the Intrabinary Shock in Spider
+                  Pulsars}",
+  journal       = {\apj},
+  year          = 2022,
+  month         = jul,
+  volume        = {933},
+  number        = {2},
+  eid           = {140},
+  pages         = {140},
+  doi           = {10.3847/1538-4357/ac74b2},
+  archiveprefix = {arXiv},
+  eprint        = {2203.00023},
+  primaryclass  = {astro-ph.HE},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2022ApJ...933..140C}
 }
 
 @Article{buellet2023,
